[gd_scene load_steps=13 format=2]

[ext_resource path="res://Level/buttons/selection_level.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui_menu/ramka_aseprite.png" type="Texture" id=2]
[ext_resource path="res://Ui/Born2bSportyV2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Levels.gd" type="Script" id=4]
[ext_resource path="res://ui_menu/left-selet-bottum_aseprite.png" type="Texture" id=5]
[ext_resource path="res://background/Bg2.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui_menu/left-pressed-bottum_aseprite.png" type="Texture" id=7]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, 0.5);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Levels" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="bg" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Bg_green" parent="bg" instance=ExtResource( 6 )]

[node name="ColorRect" type="ColorRect" parent="bg"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Book2" type="TextureRect" parent="bg"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="NameScene" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.139
margin_top = 9.0
margin_bottom = 15.98
custom_colors/font_color = Color( 0.521569, 0, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = "LEVELS"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.075
anchor_top = 0.239
anchor_right = 0.916
anchor_bottom = 0.772
margin_top = -0.0200005
margin_right = -0.119995
margin_bottom = 0.0399933
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_left = 18.0
margin_top = 1.0
margin_right = 251.0
margin_bottom = 95.0

[node name="LevelsButtons" type="GridContainer" parent="CenterContainer/MarginContainer"]
margin_right = 233.0
margin_bottom = 94.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/vseparation = 5
custom_constants/hseparation = 13
columns = 6

[node name="36" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
button = 36

[node name="37" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_left = 41.0
margin_right = 69.0
button = 37

[node name="38" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_left = 82.0
margin_right = 110.0
button = 38

[node name="39" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_left = 123.0
margin_right = 151.0
button = 39

[node name="40" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_left = 164.0
margin_right = 192.0
button = 40

[node name="41" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_left = 205.0
margin_right = 233.0
button = 41

[node name="42" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_top = 33.0
margin_bottom = 61.0
button = 42

[node name="43" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_left = 41.0
margin_top = 33.0
margin_right = 69.0
margin_bottom = 61.0
button = 43

[node name="44" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_left = 82.0
margin_top = 33.0
margin_right = 110.0
margin_bottom = 61.0
button = 44

[node name="45" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_left = 123.0
margin_top = 33.0
margin_right = 151.0
margin_bottom = 61.0
button = 45

[node name="46" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_left = 164.0
margin_top = 33.0
margin_right = 192.0
margin_bottom = 61.0
button = 46

[node name="47" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_left = 205.0
margin_top = 33.0
margin_right = 233.0
margin_bottom = 61.0
button = 47

[node name="48" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_top = 66.0
margin_bottom = 94.0
button = 48

[node name="49" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_left = 41.0
margin_top = 66.0
margin_right = 69.0
margin_bottom = 94.0
button = 49

[node name="50" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_left = 82.0
margin_top = 66.0
margin_right = 110.0
margin_bottom = 94.0
button = 50

[node name="51" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_left = 123.0
margin_top = 66.0
margin_right = 151.0
margin_bottom = 94.0
button = 51

[node name="52" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_left = 164.0
margin_top = 66.0
margin_right = 192.0
margin_bottom = 94.0
button = 52

[node name="53" parent="CenterContainer/MarginContainer/LevelsButtons" instance=ExtResource( 1 )]
margin_left = 205.0
margin_top = 66.0
margin_right = 233.0
margin_bottom = 94.0
button = 53

[node name="lvl_ad" type="TextureButton" parent="."]
anchor_left = 0.106
anchor_top = 0.5
anchor_right = 0.106
anchor_bottom = 0.5
margin_left = -21.92
margin_top = -11.0
margin_right = 0.079998
margin_bottom = 11.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="Buttons" type="Control" parent="."]
anchor_top = 0.864
anchor_right = 1.0
anchor_bottom = 0.864
margin_top = -13.52
margin_bottom = 13.48

[node name="Back" type="Button" parent="Buttons"]
anchor_left = 0.378
anchor_top = 0.5
anchor_right = 0.609
anchor_bottom = 0.5
margin_left = 0.0399933
margin_top = -11.5
margin_right = 0.119995
margin_bottom = 10.5
focus_mode = 0
custom_fonts/font = SubResource( 2 )
flat = true

[node name="Label" type="Label" parent="Buttons/Back"]
anchor_left = 0.257
anchor_right = 0.743
anchor_bottom = 1.0
margin_left = -0.017992
margin_right = 0.0180054
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 3 )
text = "BACK"
align = 1
valign = 1

[connection signal="pressed" from="lvl_ad" to="." method="_on_lvl_ad_pressed"]
[connection signal="pressed" from="Buttons/Back" to="." method="_on_Back_pressed"]
